--- a/index.html
+++ b/index.html
@@ -10,50 +10,51 @@
         }
 
         .container {
-            margin-top: 10;
+            margin-left: 20px;
+            margin-right: 20px;
             display: flex;
             flex-direction: column;
-            align-items: center;
         }
 
         .title {
-            font-size: 60px;
+            font-size: 90px;
             font-weight: bold;
-            margin-bottom: 20px;
+            margin-bottom: 50px;
+            margin-top: 50px;
         }
 
         .coordinates {
-            width: auto;
-            font-size: 20px;
-            padding: 10px 20px;
+            font-size: 80px;
+            padding: 20px 40px;
             background-color: #ffffff;
             border-radius: 10px;
             box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
 
         .smallT {
-            font-size: 20px;
+            font-size: 50px;
         }
 
-        @keyframes fade {
-            from {
-                opacity: 1;
-            }
+        .padding {
+            padding-top: 20px;
+        }
 
-            to {
-                opacity: 0.5;
-            }
+        input.larger {
+            width: 50px;
+            height: 50px;
         }
     </style>
 </head>
 
 <body>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="stuquery.min.js"></script>
     <script src="virtualsky.js" type="text/javascript"></script>
 
     <div class="container">
-        <div class="title">.</div>
+        <div class="title">ALT-AZ</div>
         <div>
             <div class="coordinates" id="alt">ALT: 0.0</div>
             <div class="coordinates" id="az">AZ : 0.0</div>
@@ -61,7 +62,7 @@
         </div>
     </div>
 
-    <div class="slider">
+    <!-- <div class="slider">
         <label for="slider1">AZ :</label>
         <input type="input" id="slider1" min="0" max="360">
     </div>
@@ -69,21 +70,42 @@
     <div class="slider">
         <label for="slider2">ALT:</label>
         <input type="input" id="slider2" min="-90" max="90">
+    </div> -->
+
+    <div class="container" id="starmap" style="width: auto; height: 900px;"></div>
+    <div class="container smallT">
+        <label class="padding" for="slider3" id="fovlbl">FOV: 30º</label>
+        <input type="range" id="fov" min="10" max="60" value="30">
+        <div style="display: flex; flex-direction: column;">
+            <div class="padding" style="display: flex;">
+                <input type="checkbox" class="larger" id="az_check"checked>
+                <label for="az_check">AZ GRID</label>
+            </div>
+            <div class="padding" style="display: flex;">
+                <input type="checkbox" class="larger" id="eq_check" >
+                <label for="eq_check">EQ GRID</label>
+            </div>
+        </div>
+
+
     </div>
 
     <script>
         var planetarium;
         const smoothingFactor = 0.95;
         let smoothedOrientation = { alpha: 0, beta: 0, gamma: 0 };
-        var alt, az, radec, alt_elm, az_elm, radec_elm
+        var alt, az, radec, alt_elm, az_elm, radec_elm, fov_lbl
 
         alt_elm = document.getElementById('alt')
         az_elm = document.getElementById('az')
         radec_elm = document.getElementById('radec_elm')
-        // dump = document.getElementById('dump')
+        fov_lbl = document.getElementById('fovlbl')
 
-        const slider1 = document.getElementById('slider1');
-        const slider2 = document.getElementById('slider2');
+        const az_check = document.getElementById('az_check')
+        const eq_check = document.getElementById('eq_check')
+        
+
+        const fov_slider = document.getElementById('fov');
 
         function degToRad(degrees) {
             return (degrees % 360) * (Math.PI / 180);
@@ -100,22 +122,20 @@
                 'showgalaxy': true,
                 'showstarlabels': true,
                 'ground': false,
-                'fov': 60,
-                'fontsize': '10px',
+                'fov': 30,
+                'fontsize': '25px',
                 'live': true,
                 'keyboard': true,
                 'mouse': true,
                 'magnitude': 10,
-                'scalestars': 2,
+                'scalestars': 4,
                 'showdate': true,
                 'showposition': true,
-                // 'gridlines_az': true,
+                'gridlines_az': true,
                 // 'gridlines_eq': true,
-                'gridlineswidth': 2,
+                'gridlineswidth': 4,
                 'gridstep': 10,
                 'atmos': true,
-                'objects': "M45;"
-
             });
 
             window.addEventListener('deviceorientation', event => {
@@ -140,35 +160,31 @@
 
             az = 323
             alt = 23
-            az_elm.innerText = `AZ : ${az}`;
-            alt_elm.innerText = `ALT: ${alt}`;
+            az_elm.innerText = `AZ : ${az}º`;
+            alt_elm.innerText = `ALT: ${alt}º`;
 
             radec = planetarium.azel2radec(degToRad(az), degToRad(alt))
-            radec_elm.innerText = `RA : ${radec['ra'].toFixed(1)}\t DEC: ${radec['dec'].toFixed(1)}`
+            radec_elm.innerText = `RA : ${radec['ra'].toFixed(1)}º\t DEC: ${radec['dec'].toFixed(1)}º`
             planetarium.panTo(radec['ra'], radec['dec'], 500)
+
+
+            fov_slider.addEventListener('input', () => {
+                fov_lbl.innerText = `FOV: ${fov_slider.value}º`;
+                planetarium.fov = fov_slider.value
+            });
+
+            eq_check.addEventListener('input', () => {
+                planetarium.grid.eq = $(eq_check).is(":checked")
+            })
+
+            az_check.addEventListener('input', () => {
+                planetarium.grid.az = $(az_check).is(":checked")
+            })
         });
 
 
-        slider1.addEventListener('input', () => {
-            az = slider1.value
-            az_elm.innerText = `AZ : ${az}`;
-
-            radec = planetarium.azel2radec(degToRad(az), degToRad(alt))
-            radec_elm.innerText = `RA : ${radec['ra'].toFixed(1)}\t DEC: ${radec['dec'].toFixed(1)}`
-            planetarium.panTo(radec['ra'], radec['dec'], 100)
-        });
-
-        slider2.addEventListener('input', () => {
-            alt = slider2.value
-            alt_elm.innerText = `ALT: ${alt}`;
-
-            radec = planetarium.azel2radec(degToRad(az), degToRad(alt))
-            radec_elm.innerText = `RA : ${radec['ra'].toFixed(1)}\t DEC: ${radec['dec'].toFixed(1)}`
-            planetarium.panTo(radec['ra'], radec['dec'], 100)
-        });
 
     </script>
-    <div id="starmap" style="width:100%;height:300px"></div>
 </body>
 
 </html>
