--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 az_elm.innerText = `ALT: ${alt}`;
 
                 radec = planetarium.azel2radec(degToRad(az), degToRad(alt))
-                radec_elm.innerText = `RA: ${radec['ra']}\t DEC: ${radec['dec']}`
+                radec_elm.innerText = `RA: ${radec['ra'].toFixed(1)}\t DEC: ${radec['dec'].toFixed(1)}`
 
                 planetarium.panTo(c['ra'], c['dec'], 1)
 
