--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 
-    <div class="container" id="starmap" style="width: auto; height: 900px;"></div>
+    <div id="starmap" style="height: 900px;"></div>
     <div class="container smallT">
         <label class="padding" for="slider3" id="fovlbl">FOV: 30º</label>
         <input type="range" id="fov" min="10" max="60" value="30">
