--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                     beta: (smoothingFactor * smoothedOrientation.beta) + ((1 - smoothingFactor) * beta),
                 };
 
-                az = (smoothedOrientation.alpha + az_off.value).toFixed(1)
-                alt = (smoothedOrientation.beta + alt_off.value).toFixed(1)
+                // az = (smoothedOrientation.alpha + az_off.value).toFixed(1)
+                // alt = (smoothedOrientation.beta + alt_off.value).toFixed(1)
 
-                az = (smoothedOrientation.alpha).toFixed(1)
-                alt = (smoothedOrientation.beta).toFixed(1)
+                az = smoothedOrientation.alpha.toFixed(1)
+                alt = smoothedOrientation.beta.toFixed(1)
 
                 alt_elm.innerText = `AZ : ${az}`;
                 az_elm.innerText = `ALT: ${alt}`;
