--- a/index.html
+++ b/index.html
@@ -17,41 +17,40 @@
     <script src="virtualsky.js" type="text/javascript"></script>
 </head>
 
-<body style="width: 100vw;">
-
+<body>
     <div class="container">
         <div class="row padding">
-            <div class="col div-border">
+            <div id="title" class="col div-border">
                 <h1 class="display-3 text-center">ALT-AZ</h1>
             </div>
         </div>
         <div class="row padding">
-            <div class="col my-auto div-border">
-                <div class="row">
-                    <div class="col-3"><span class="fs-8">ALT</span></div>
-                    <div class="col"><span class="fs-1" id="alt">111º</span></div>
-                </div>
-            </div>
             <div class="col div-border">
                 <div class="row">
                     <div class="col-3" v><span class="fs-8">AZ</span></div>
                     <div class="col"><span class="fs-1" id="az">111º</span></div>
                 </div>
             </div>
+            <div class="col div-border">
+                <div class="row">
+                    <div class="col-3"><span class="fs-8">ALT</span></div>
+                    <div class="col"><span class="fs-1" id="alt">111º</span></div>
+                </div>
+            </div>
         </div>
         <div class="row padding">
             <div class="col div-border">
                 <div class="row">
-                    <div class="col-auto mx-auto">
+                    <div class="col mx-auto">
                         <div class="row">
-                            <div class="col-auto mx-auto">
+                            <div class="col-6 mx-auto">
                                 <div class="row">
-                                    <div class="col-auto"><span>RA</span></div>
-                                    <div class="col-auto" style="margin-right: 50px;"><span id="ra_elm">110º</span>
+                                    <div class="col-auto" style="margin-left: 50px;"><span>RA</span></div>
+                                    <div class="col-auto" ><span id="ra_elm">110º</span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-auto mx-auto">
+                            <div class="col-6 mx-auto">
                                 <div class="row">
                                     <div class="col-auto"><span>DEC</span></div>
                                     <div class="col-3"><span id="dec_elm">111º</span></div>
@@ -70,7 +69,7 @@
         <div class="row padding">
             <div class="col div-border">
                 <div class="row">
-                    <div class="col-auto"><label id="fovlbl" for="fov">FOV 30º</label></div>
+                    <div class="col-4"><label id="fovlbl" for="fov">FOV 30º</label></div>
                     <div class="col"><input class="form-range" type="range" id="fov" min="5" max="90" value=30
                             step="0.1"></div>
                 </div>
@@ -92,10 +91,10 @@
             <div class="col div-border">
                 <div class="row">
                     <div><label class="form-label" id="alt_off_lbl">ALT OFFSET 0º</label></div>
-                    <div><input class="form-range" id='alt_off' type="range" value="0" min="-90" max="+90" step="0.01">
+                    <div><input class="form-range" id='alt_off' type="range" value="0" min="-90" max="90" step="0.01">
                     </div>
                     <div><label for="az_off" class="form-label" id="az_off_lbl">AZ OFFSET 0º</label></div>
-                    <div><input class="form-range" id='az_off' type="range" value="0" min="-180" max="+180" step="0.01">
+                    <div><input class="form-range" id='az_off' type="range" value="0" min="-180" max="180" step="0.01">
                     </div>
                 </div>
             </div>
